Don't fail if there is no user-dirs.dirs

Based on patch from tristan

https://bugs.freedesktop.org/show_bug.cgi?id=95339